--- a/Financeiro/Financeiro.csproj
+++ b/Financeiro/Financeiro.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Financeiro</RootNamespace>
     <AssemblyName>Financeiro</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -21,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -162,6 +164,24 @@
     <Compile Include="UserControls\Especiais\YellowButton.designer.cs">
       <DependentUpon>YellowButton.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\MdlAdministracao\Cadastros\CadastroUsuarios.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\MdlAdministracao\Cadastros\CadastroUsuarios.Designer.cs">
+      <DependentUpon>CadastroUsuarios.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\MdlAdministracao\Consultas\UC_Usuarios.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\MdlAdministracao\Consultas\UC_Usuarios.Designer.cs">
+      <DependentUpon>UC_Usuarios.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Util\Alerta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Util\Alerta.Designer.cs">
+      <DependentUpon>Alerta.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Forms\BaseWindow.resx">
       <DependentUpon>BaseWindow.cs</DependentUpon>
     </EmbeddedResource>
@@ -192,6 +212,15 @@
     </Compile>
     <EmbeddedResource Include="UserControls\Especiais\YellowButton.resx">
       <DependentUpon>YellowButton.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\MdlAdministracao\Cadastros\CadastroUsuarios.resx">
+      <DependentUpon>CadastroUsuarios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\MdlAdministracao\Consultas\UC_Usuarios.resx">
+      <DependentUpon>UC_Usuarios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Util\Alerta.resx">
+      <DependentUpon>Alerta.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -328,6 +357,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\1472961465_vector_66_091.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="UserControls\MdlCompras\Cadastros\" />
+    <Folder Include="UserControls\MdlCompras\Consultas\" />
+    <Folder Include="UserControls\MdlEstoque\Cadastros\" />
+    <Folder Include="UserControls\MdlEstoque\Consultas\" />
+    <Folder Include="UserControls\MdlFinanceiro\Cadastros\" />
+    <Folder Include="UserControls\MdlFinanceiro\Consultas\" />
+    <Folder Include="UserControls\MdlPessoas\Cadastros\" />
+    <Folder Include="UserControls\MdlPessoas\Consultas\" />
+    <Folder Include="UserControls\MdlVendas\Cadastros\" />
+    <Folder Include="UserControls\MdlVendas\Consultas\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
