--- a/Financeiro/Financeiro.csproj
+++ b/Financeiro/Financeiro.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Entidades\Usuarios.cs" />
     <Compile Include="Entidades\Valores_caixas.cs" />
     <Compile Include="Enums\Fpg_Efetuado_em.cs" />
+    <Compile Include="Enums\ORDEM.cs" />
     <Compile Include="Enums\Tipo_armazem.cs" />
     <Compile Include="Enums\Tipo_Movimentacao.cs" />
     <Compile Include="Enums\TIPO_NOTIFICACAO.cs" />
@@ -156,6 +157,7 @@
     <Compile Include="Forms\TopClient.designer.cs">
       <DependentUpon>TopClient.cs</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\BarraTarefas.cs" />
     <Compile Include="Interfaces\IManagedUserControl.cs" />
     <Compile Include="Interfaces\IManagedWindow.cs" />
     <Compile Include="Program.cs" />
@@ -173,29 +175,17 @@
     <Compile Include="UserControls\Especiais\YellowButton.designer.cs">
       <DependentUpon>YellowButton.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\MdlAdministracao\Cadastros\CadastroEmpresa.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\MdlAdministracao\Cadastros\CadastroEmpresa.Designer.cs">
+      <DependentUpon>CadastroEmpresa.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\MdlAdministracao\Cadastros\CadastroUsuarios.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UserControls\MdlAdministracao\Cadastros\CadastroUsuarios.Designer.cs">
       <DependentUpon>CadastroUsuarios.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UserControls\MdlAdministracao\Consultas\UC_Usuarios.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UserControls\MdlAdministracao\Consultas\UC_Usuarios.Designer.cs">
-      <DependentUpon>UC_Usuarios.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UserControls\MdlFinanceiro\Cadastros\CadastroTmv.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UserControls\MdlFinanceiro\Cadastros\CadastroTmv.Designer.cs">
-      <DependentUpon>CadastroTmv.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UserControls\MdlFinanceiro\Consultas\UC_TiposMovimento.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UserControls\MdlFinanceiro\Consultas\UC_TiposMovimento.Designer.cs">
-      <DependentUpon>UC_TiposMovimento.cs</DependentUpon>
     </Compile>
     <Compile Include="Util\Alerta.cs">
       <SubType>Form</SubType>
@@ -237,17 +227,11 @@
     <EmbeddedResource Include="UserControls\Especiais\YellowButton.resx">
       <DependentUpon>YellowButton.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\MdlAdministracao\Cadastros\CadastroEmpresa.resx">
+      <DependentUpon>CadastroEmpresa.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserControls\MdlAdministracao\Cadastros\CadastroUsuarios.resx">
       <DependentUpon>CadastroUsuarios.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UserControls\MdlAdministracao\Consultas\UC_Usuarios.resx">
-      <DependentUpon>UC_Usuarios.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UserControls\MdlFinanceiro\Cadastros\CadastroTmv.resx">
-      <DependentUpon>CadastroTmv.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UserControls\MdlFinanceiro\Consultas\UC_TiposMovimento.resx">
-      <DependentUpon>UC_TiposMovimento.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Util\Alerta.resx">
       <DependentUpon>Alerta.cs</DependentUpon>
@@ -389,14 +373,65 @@
     <None Include="Resources\1472961465_vector_66_091.ico" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="UserControls\MdlAdministracao\Consultas\" />
     <Folder Include="UserControls\MdlCompras\Cadastros\" />
     <Folder Include="UserControls\MdlCompras\Consultas\" />
     <Folder Include="UserControls\MdlEstoque\Cadastros\" />
     <Folder Include="UserControls\MdlEstoque\Consultas\" />
+    <Folder Include="UserControls\MdlFinanceiro\Cadastros\" />
+    <Folder Include="UserControls\MdlFinanceiro\Consultas\" />
     <Folder Include="UserControls\MdlPessoas\Cadastros\" />
     <Folder Include="UserControls\MdlPessoas\Consultas\" />
     <Folder Include="UserControls\MdlVendas\Cadastros\" />
     <Folder Include="UserControls\MdlVendas\Consultas\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\binoculo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\excel_ex.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\novo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\novo1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\primeiro.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\anterior.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\proximo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ultimo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\testes.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\calc.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cancsoft.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\calculsoft.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\hlp.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\salvar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\editar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\deletar.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
